Screen Character finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,13 @@
     <string name="app_name">FinalSpace</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Character item -->
+
+    <string name="name">Name: %s</string>
+    <string name="hair">Hair: %s </string>
+    <string name="gender">Gender: %s </string>
+    <string name="origin">Origin: %s</string>
+    <string name="status">Status: %s</string>
+    <string name="specie">Specie: %s </string>
 </resources>
